creating the html for petStore

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Luna's treats</title>
 </head>
 <body>
-<h1>Welcome to Luna's treats</h1>
+<div>
+    <h1>Welcome to Luna's treats</h1>
+</div>
+
 </body>
 </html>
