--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <div>
     <h1>Welcome to Luna's treats</h1>
     <h3>Best treats Online for your cats</h3>
+    <ul>
+        <li>Home</li>
+        <li>Shop</li>
+        <li>Contact Us</li>
+    </ul>
 </div>
 
 </body>
